--- a/apps/tally/project.json
+++ b/apps/tally/project.json
@@ -53,10 +53,14 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "browserTarget": "tally:build:production"
+          "browserTarget": "tally:build:production",
+          "host": "0.0.0.0",
+          "disableHostCheck": true
         },
         "development": {
-          "browserTarget": "tally:build:development"
+          "browserTarget": "tally:build:development",
+          "host": "0.0.0.0",
+          "disableHostCheck": true
         }
       },
       "defaultConfiguration": "development",
