--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/serve-static": "^3.0.0",
     "@nrwl/angular": "14.7.0",
+    "danfojs-node": "^1.1.1",
+    "express": "^4.18.1",
+    "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -46,8 +51,11 @@
     "@nrwl/nest": "14.7.0",
     "@nrwl/node": "14.7.0",
     "@nrwl/workspace": "14.7.0",
+    "@types/express": "^4.17.13",
     "@types/jest": "28.1.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "16.11.7",
+    "@types/xlsx": "^0.0.36",
     "@typescript-eslint/eslint-plugin": "~5.33.1",
     "@typescript-eslint/parser": "~5.33.1",
     "cypress": "^10.7.0",
